💄 fix(add_src_to_code_block): avoid overlapping text

--- a/sass/parts/_code.scss
+++ b/sass/parts/_code.scss
@@ -86,7 +86,7 @@ pre {
             right: 1.3rem;
             padding-top: 0.3rem;
             padding-right: 1.3rem;
-            max-width: 80%;
+            max-width: calc(100% - 14em);
             height: 0.9rem;
             overflow: hidden;
             color: var(--hover-color);
